Fixed recipe name appearing correctly

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 --------------------------------------------------------------------------------
+Version: 0.1.7
+Date: 2020-01-14
+  Features:
+  Changes:
+  Bug fixes:
+    - Fixed recipe name appearing correctly
+  Info:
+--------------------------------------------------------------------------------
 Version: 0.1.6
 Date: 2020-01-12
   Features:
