--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 --------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 2020-01-22
+  Features:
+  Changes:
+  Bug fixes:
+  Info:
+    - Updated for 0.18
+---------------------------------------------------------------------------------
 Version: 0.1.8
 Date: 2020-01-14
   Features:
