Icon sizes needed tweaking

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 --------------------------------------------------------------------------------
+Version: 0.2.1
+Date: 2020-01-22
+  Features:
+  Changes:
+  Bug fixes:
+    - Icon sizes needed tweaking
+  Info:
+--------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2020-01-22
   Features:
