Updated icon scaling

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 --------------------------------------------------------------------------------
+Version: 0.2.2
+Date: 2020-01-22
+  Features:
+  Changes:
+  Bug fixes:
+    - Fixed item icon scaling on the ground + on belts
+  Info:
+---------------------------------------------------------------------------------
 Version: 0.2.1
 Date: 2020-01-22
   Features:
