--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,20 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.1
+Date: 2020-01-22
+  Features:
+  Changes:
+  Bugfixes:
+    - Fixed icon size
+  Info:
+----------------------------------------------------------------------------------------------------
+Version: 0.18.0
+Date: 2020-01-22
+  Features:
+  Changes:
+    - Updated for 0.18
+  Bugfixes:
+  Info:
+----------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 2020-01-22
   Features:
