--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.18.2
+Date: 2020-04-20
+  Features:
+    - Added some biter bodies to crude oil recipes
+    - Added an option to move "Coal Liquefaction" under "Chemical Science"
+  Changes:
+  Bugfixes:
+  Info:
+---------------------------------------------------------------------------------------------------
 Version: 0.18.1
 Date: 2020-01-22
   Features:
@@ -6,7 +15,7 @@ Date: 2020-01-22
   Bugfixes:
     - Fixed icon size
   Info:
-----------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------------------------------------
 Version: 0.18.0
 Date: 2020-01-22
   Features:
@@ -14,7 +23,7 @@ Date: 2020-01-22
     - Updated for 0.18
   Bugfixes:
   Info:
-----------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------------------------------------
 Version: 0.2.2
 Date: 2020-01-22
   Features:
