--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,12 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2020-04-20
+  Features:
+  Changes:
+    - Updated for Factorio 1.1
+  Bugfixes:
+  Info:
+---------------------------------------------------------------------------------------------------
 Version: 0.18.2
 Date: 2020-04-20
   Features:
